--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -7,6 +7,17 @@
   margin: 0 auto;
 }
 
+.loading {
+  position: absolute;
+  margin-top: 52px;
+  border-radius: 1px;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: #2196f3;
+  // transform: scaleX(0%);
+}
+
 .logo {
   margin: 50px auto;
 }
